[gd_scene load_steps=5 format=3 uid="uid://bwc352f3dkopn"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_lr4p2"]
[ext_resource type="LabelSettings" uid="uid://daq1xwj0xrxvn" path="res://themes/smol_label_setting.tres" id="3_lhtdg"]
[ext_resource type="Script" path="res://scripts/cheatcodes.gd" id="4_1qxh8"]
[ext_resource type="FontFile" uid="uid://dve7xy45cle31" path="res://fonts/Early GameBoy.ttf" id="5_ilaeu"]

[node name="MainMenu" type="TabContainer"]
custom_minimum_size = Vector2(0, 288)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_lr4p2")

[node name="Cheatcodes" type="AspectRatioContainer" parent="."]
layout_mode = 2
script = ExtResource("4_1qxh8")

[node name="VBoxContainer" type="VBoxContainer" parent="Cheatcodes"]
layout_mode = 2

[node name="EnterCheatcodeField" type="LineEdit" parent="Cheatcodes/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ilaeu")
placeholder_text = "enter cheatcode"

[node name="MoneyExploitLabel" type="Label" parent="Cheatcodes/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "give yourself some catcoins"
label_settings = ExtResource("3_lhtdg")

[node name="MoneyExploitField" type="LineEdit" parent="Cheatcodes/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ilaeu")
placeholder_text = "type amount here"

[connection signal="text_submitted" from="Cheatcodes/VBoxContainer/EnterCheatcodeField" to="Cheatcodes" method="_on_enter_cheatcode_field_text_submitted"]
[connection signal="text_submitted" from="Cheatcodes/VBoxContainer/MoneyExploitField" to="Cheatcodes" method="_on_money_exploit_field_text_submitted"]
